--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Change Starts Today</title>
   <meta name="description" content="Change Starts Today, or CST, Forever Changing Today for a Better Tomorrow">
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 
 
@@ -56,4 +56,5 @@
 
 
 </body>
+
 </html>
