--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Change Starts Today</title>
+  <meta name="description" content="Change Starts Today, or CST, Forever Changing Today for a Better Tomorrow">
+  <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 
@@ -56,6 +58,7 @@
 </body>
 
 </html>
+
 
 
 
