--- a/index.html
+++ b/index.html
@@ -117,6 +117,24 @@
   transition: all 0.3s ease;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);  /* subtle shadow */
 }
+.gallery img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 15px;
+  border: 3px solid #007b8a; /* teal outline */
+  background-color: #fff;
+  padding: 4px; /* small space between border and image */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+}
+
+.gallery img:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  border-color: #00bcd4; /* brightens on hover */
+}
+
   </style>
 </head>
 
@@ -175,7 +193,30 @@
       });
     });
   </script>
+  <!-- Page 5 -->
+  <section class="page5" id="page5">
+    <h1>Gallery</h1>
+    <div class="gallery">
+      <img src="https://source.unsplash.com/400x300/?community" alt="Community Event">
+      <img src="https://source.unsplash.com/400x300/?children" alt="Children">
+      <img src="https://source.unsplash.com/400x300/?charity" alt="Charity">
+      <img src="https://source.unsplash.com/400x300/?volunteer" alt="Volunteers">
+      <img src="https://source.unsplash.com/400x300/?support" alt="Support">
+      <img src="https://source.unsplash.com/400x300/?education" alt="Education">
+    </div>
+  </section>
 
+  <script>
+    // Fade-in animation for sections as they appear
+    const sections = document.querySelectorAll('.page2, .page3, .page4, .page5');
+    window.addEventListener('scroll', () => {
+      sections.forEach(section => {
+        const top = section.getBoundingClientRect().top;
+        const trigger = window.innerHeight * 0.8;
+        if (top < trigger) section.classList.add('visible');
+      });
+    });
+  </script>
 
 </body>
 </html>
