--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     /* General body setup */
     body {
       margin: 0;
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Cinzel Decorative', serif;
+font-height: 90;
+font-weight: 700;
       scroll-behavior: smooth;
     }
 
@@ -104,51 +106,50 @@
       text-align: center;
     }
 
-.donate-btn {
-  margin: 35px 0;
-  padding: 18px 45px;           /* Bigger padding for size */
-  background-color: #efebe8;
-  color: #007b8a;
+.star-button {
+  position: relative;
+  background: #ffffa2;
+  width: 200px;   /* larger, more presence */
+  height: 200px;
+  clip-path: polygon(
+    50% 5%, 63% 35%, 98% 38%, 
+    70% 60%, 80% 92%, 50% 75%, 
+    20% 92%, 30% 60%, 2% 38%, 37% 35%
+  );
   border: none;
-  border-radius: 50px;          /* More rounded edges */
-  font-size: 1.4rem;            /* Larger text */
-  font-weight: 700;             /* Bolder font */
   cursor: pointer;
-  transition: all 0.3s ease;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);  /* subtle shadow */
-}
-.gallery img {
-  width: 100%;
-  height: 250px;
-  object-fit: cover;
-  border-radius: 15px;
-  border: 3px solid #007b8a; /* teal outline */
-  background-color: #fff;
-  padding: 4px; /* small space between border and image */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
+  transition: transform 0.3s ease, box-shadow 0.4s ease;
+  box-shadow: 0 0 30px rgba(255, 221, 87, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 700;
+  font-size: 1.1rem;
+  color: #1c1d09;
+  border-radius: 200px; /* visually softens the points */
+  filter: drop-shadow(0 5px 15px rgba(255, 200, 0, 0.4));
 }
 
-.gallery img:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-  border-color: #00bcd4; /* brightens on hover */
+.star-button:hover {
+  transform: scale(1.15);
+  box-shadow: 0 0 50px rgba(255, 221, 87, 0.7);
+  filter: drop-shadow(0 0 25px rgba(255, 230, 100, 0.8));
 }
 
-  </style>
+</style>
 </head>
 
 <body>
    <!-- Page 1 -->
   <section class="page1">
     <h1 class="animate-text">Change Starts Today</h1>
-    <h2 class="subheading">Forever Changing Today for a Better Tomorrow</h2>
+    <h2 class="subheading">FOREVER CHANGING TODAY FOR A BETTER TOMORROW</h2>
   </section>
 
   <!-- Page 2 -->
   <section class="page2" id="page2">
     <h1>Get Involved</h1>
-    <button class="donate-btn" onclick="document.querySelector('#page3').scrollIntoView({ behavior: 'smooth' });">Donate</button>
+   <button class="star-button" onclick="location.href='#page3'">DONATE</button>
     
     <h2>CURRENT EVENTS</h2>
     <div class="events">
