--- a/index.html
+++ b/index.html
@@ -196,14 +196,15 @@ font-weight: 700;
   </script>
   <!-- Page 5 -->
   <section class="page5" id="page5">
-    <h1>Gallery</h1>
+    <h1>OUR STARS</h1>
+    <h3>ALL THE LOVELY PEOPLE WE'VE HELPED<h3>
     <div class="gallery">
-      <img src="https://source.unsplash.com/400x300/?community" alt="Community Event">
-      <img src="https://source.unsplash.com/400x300/?children" alt="Children">
-      <img src="https://source.unsplash.com/400x300/?charity" alt="Charity">
-      <img src="https://source.unsplash.com/400x300/?volunteer" alt="Volunteers">
-      <img src="https://source.unsplash.com/400x300/?support" alt="Support">
-      <img src="https://source.unsplash.com/400x300/?education" alt="Education">
+      <img src="https://source.unsplash.com/400x300/?community" alt="NAME">
+      <img src="https://source.unsplash.com/400x300/?children" alt="NAME">
+      <img src="https://source.unsplash.com/400x300/?charity" alt="NAME">
+      <img src="https://source.unsplash.com/400x300/?volunteer" alt="NAME">
+      <img src="https://source.unsplash.com/400x300/?support" alt="NAME">
+      <img src="https://source.unsplash.com/400x300/?education" alt="NAME">
     </div>
   </section>
 
