--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
   <style>
     /* ===== GLOBAL ===== */
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: 'Cinzel Decorative', serif;
@@ -43,11 +47,11 @@
       top: 0;
       width: 100%;
       height: 70px;
-      background: #ffffa2; /* UPDATED */
+      background: #f3f0b8;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0 40px;
+      padding: 0 30px;
       z-index: 1000;
       box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     }
@@ -56,21 +60,26 @@
       color: #1c1d09;
       font-size: 1.3rem;
       letter-spacing: 2px;
+      white-space: nowrap;
     }
 
     nav ul {
       list-style: none;
       display: flex;
-      gap: 25px;
+      gap: 20px;
       margin: 0;
       padding: 0;
+      flex-wrap: wrap;
+      justify-content: flex-end;
     }
 
     nav a {
       text-decoration: none;
       color: #1c1d09;
       letter-spacing: 1px;
+      font-size: 0.95rem;
       position: relative;
+      white-space: nowrap;
     }
 
     nav a::after {
@@ -95,7 +104,7 @@
     }
 
     .page1-content {
-      transform: translateY(-40px); /* MOVES TEXT UP */
+      transform: translateY(-40px);
     }
 
     .animate-text {
@@ -220,7 +229,7 @@
 
 <body>
 
-  <!-- MENU -->
+  <!-- MENU BAR -->
   <nav>
     <div class="logo">CST</div>
     <ul>
@@ -228,7 +237,7 @@
       <li><a href="#page2">Get Involved</a></li>
       <li><a href="#page3">Donate</a></li>
       <li><a href="#page4">Mission</a></li>
-      <li><a href="#page5">Our Stars</a></li>
+      <li><a href="#page5">Our Team</a></li>
     </ul>
   </nav>
 
@@ -306,5 +315,3 @@
 
 </body>
 </html>
-
-
