--- a/index.html
+++ b/index.html
@@ -233,11 +233,11 @@
   <nav>
     <div class="logo">CST</div>
     <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#page2">Get Involved</a></li>
-      <li><a href="#page3">Donate</a></li>
-      <li><a href="#page4">Mission</a></li>
-      <li><a href="#page5">Our Team</a></li>
+      <li><a href="#home">HOME</a></li>
+      <li><a href="#page2">GET INVOLVED</a></li>
+      <li><a href="#page3">DONATE</a></li>
+      <li><a href="#page4">MISSION</a></li>
+      <li><a href="#page5">OUR TEAM</a></li>
     </ul>
   </nav>
 
@@ -315,3 +315,4 @@
 
 </body>
 </html>
+
