--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       top: 0;
       width: 100%;
       height: 70px;
-      background: #f3f0b8;
+      background: #efebe8;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -315,4 +315,5 @@
 
 </body>
 </html>
+
 
