--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     }
 
     .logo {
-      color: #1c1d09;
+      color: #ffffa2;
       font-size: 1.3rem;
       letter-spacing: 2px;
       white-space: nowrap;
@@ -315,6 +315,7 @@
 
 </body>
 </html>
+
 
 
 
